# FormulaSAE_Telemetry_Software

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  message_structure.txt
DATI/: GUIDA.txt
DATI/16_10_25_test_avvio/: telemetry_20251016_111121.csv  telemetry_20251016_111348.csv  telemetry_20251016_111929.csv  telemetry_20251016_111929.txt  telemetry_20251016_112152.csv  telemetry_20251016_112152.txt  telemetry_20251016_120018.csv  telemetry_20251016_120018.txt
assets/: macos_icon.icns  resources.h  windows_resources.rc
assets/resources/: imgui.ini
build_windows/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
include/Telemetry/Services/: DataAggregatorService.hpp  FileService.hpp  NetworkService.hpp  SerialService.hpp  ServiceManager.hpp  imgui.ini
include/Telemetry/data_acquisition/: BaudRateQueryable.hpp  IDataSource.hpp  PacketParser.hpp  SerialDataSource.hpp  ThreadSafeQueue.hpp
include/Telemetry/data_writing/: CsvWriter.hpp  DataAggregator.hpp  DataManager.hpp  IAggregatedDataSubscriber.hpp  IWritingSubscriber.hpp  TxtWriter.hpp
include/Telemetry/file_reading/: PlaybackManager.hpp
include/UI/: AccBrkWindow.hpp  CreditsWindow.hpp  Dashboard.hpp  DynamicsPowertrainWindow.hpp  FileSelectionWindow.hpp  HallWindow.hpp  ImGuiFileBrowser.hpp  InverterDataWindow.hpp  LogTerminal.hpp  ModulesBatteryWindow.hpp  PlaybackControlsWindow.hpp  PlotGraph.hpp  SerialDeviceSelection.hpp  SpeedometerWindow.hpp  StatusWindow.hpp  SteerWindow.hpp  SuspensionWindow.hpp  TemperatureWindow.hpp  Theme.hpp  UIElement.hpp  UIManager.hpp  VarianceWindow.hpp  imgui.ini
include/application_services/: SettingsManager.hpp
include/utils/: AssetManagerFactory.hpp  IAssetManager.hpp  fsUtils.hpp  resources.hpp
output_data/: telemetry_20251015_205218.txt  telemetry_20251016_111121.txt  telemetry_20251016_111348.txt  telemetry_20251016_112115.txt
src/: imgui.ini  main.cpp
src/Telemetry/Services/: DataAggregatorService.cpp  FileService.cpp  NetworkService.cpp  PacketParser.cpp  SerialService.cpp  ServiceManager.cpp
src/Telemetry/data_acquisition/: SerialDataSource.cpp  imgui.ini
src/Telemetry/data_writing/: CsvWriter.cpp  DataAggregator.cpp  DataManager.cpp  TxtWriter.cpp
src/Telemetry/file_reading/: PlaybackManager.cpp
src/UI/: AccBrkWindow.cpp  CreditsWindow.cpp  Dashboard.cpp  DynamicsPowertrainWindow.cpp  FileSelectionWindow.cpp  HallWindow.cpp  ImGuiFileBrowser.cpp  InverterDataWindow.cpp  LogTerminal.cpp  ModulesBatteryWindow.cpp  PlaybackControlsWindow.cpp  PlotGraph.cpp  SerialDeviceSelection.cpp  SpeedometerWindow.cpp  StatusWindow.cpp  SteerWindow.cpp  SuspensionWindow.cpp  TemperatureWindow.cpp  UIManager.cpp  VarianceWindow.cpp  imgui.ini
src/application_services/: SettingsManager.cpp
src/utils/: WindowsAssetManager.cpp  fsUtils.cpp  resources.cpp
src/utils/AssetManager/: AssetManagerFactory.cpp  AssetManager_MacOS.cpp  AssetManager_Windows.cpp
telemetry_tester/: data_gen.py  main.py  serial_worker.py
tester_bin_sd/: main.py
tester_uart/: data_gen.py
